added project file

--- a/Capstone project.ipynb
+++ b/Capstone project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "6ae7b06f",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n"
+      "warning: LF will be replaced by CRLF in Capstone project.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main fea2183] added project file\n",
+      " 1 file changed, 130 insertions(+)\n",
+      " create mode 100644 Capstone project.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/ahwali/capstone-dummy.git\n",
+      "   4231fd3..fea2183  main -> main\n"
      ]
     }
    ],
@@ -25,82 +41,219 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad91ceae",
+   "id": "e62fa718",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/c/Users/ahwal/Desktop/Classes/Capstone\n"
+      "\u001b[1mDownloading and preparing dataset Unknown size (download: Unknown size, generated: Unknown size, total: Unknown size) to ~\\tensorflow_datasets\\imdb_reviews\\plain_text\\1.0.0...\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1eda5d07a8bb43cea402a068d56982ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Completed...: 0 url [00:00, ? url/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c02b39fcc6f4a01b0aeadd4e86df33d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Size...: 0 MiB [00:00, ? MiB/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating splits...:   0%|          | 0/3 [00:00<?, ? splits/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train examples...: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Shuffling ~\\tensorflow_datasets\\imdb_reviews\\plain_text\\1.0.0.incompleteE8OCQO\\imdb_reviews-train.tfrecord*...…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test examples...: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Shuffling ~\\tensorflow_datasets\\imdb_reviews\\plain_text\\1.0.0.incompleteE8OCQO\\imdb_reviews-test.tfrecord*...:…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating unsupervised examples...: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Shuffling ~\\tensorflow_datasets\\imdb_reviews\\plain_text\\1.0.0.incompleteE8OCQO\\imdb_reviews-unsupervised.tfrec…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDataset imdb_reviews downloaded and prepared to ~\\tensorflow_datasets\\imdb_reviews\\plain_text\\1.0.0. Subsequent calls will reuse this data.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!pwd"
+    "import tensorflow_datasets as tfds\n",
+    "imdb, info = tfds.load('imdb_reviews', with_info=True, as_supervised=True)\n",
+    "train_data, test_data = imdb['train'], imdb['test']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7927a222",
+   "execution_count": 4,
+   "id": "35c5f7a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd .."
+    "import numpy as np\n",
+    "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "82fbe02d",
+   "id": "07894271",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/c/Users/ahwal/Desktop/Classes/Capstone\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "71ccba8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/c/Users/ahwal/Desktop/Classes/Capstone\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cd ..\n",
-    "!pwd"
+    "training_sentences = []\n",
+    "training_labels = []\n",
+    "\n",
+    "testing_sentences = []\n",
+    "testing_labels = []\n",
+    "\n",
+    "# Loop over all training examples and save the sentences and labels\n",
+    "for s,l in train_data:\n",
+    "    training_sentences.append(s.numpy().decode('utf8'))\n",
+    "    training_labels.append(l.numpy())\n",
+    "\n",
+    "# Loop over all test examples and save the sentences and labels\n",
+    "for s,l in test_data:\n",
+    "    testing_sentences.append(s.numpy().decode('utf8'))\n",
+    "    testing_labels.append(l.numpy())\n",
+    "\n",
+    "# Convert labels lists to numpy array\n",
+    "training_labels_final = np.array(training_labels)\n",
+    "testing_labels_final = np.array(testing_labels)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b7caebad",
+   "id": "47449a7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This was an absolutely terrible movie. Don't be lured in by Christopher Walken or Michael Ironside. Both are great actors, but this must simply be their worst role in history. Even their great acting could not redeem this movie's ridiculous storyline. This movie is an early nineties US propaganda piece. The most pathetic scenes were those when the Columbian rebels were making their cases for revolutions. Maria Conchita Alonso appeared phony, and her pseudo-love affair with Walken was nothing but a pathetic emotional plug in a movie that was devoid of any real meaning. I am disappointed that there are movies like this, ruining actor's like Christopher Walken's good name. I could barely sit through it.\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "!cd .."
+    "print(training_sentences[0])\n",
+    "print(training_labels[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6887b7c8",
+   "id": "35c07b59",
    "metadata": {},
    "outputs": [],
    "source": []
